<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">易吐槽</string>
    <string name="action_settings">Settings</string>
    <string name="string_ShenTu">吐槽神图</string>
    <string name="string_HuoRe">吐得火热</string>
    <string name="string_ZhiChang">吐槽职场</string>
    <string name="string_ShengHuo">吐槽生活</string>
    <string name="string_XinXian">吐得新鲜</string>
    <string name="string_JingYan">吐得惊艳</string>
    
    <string name="string_login">登 录</string>
    <string name="string_logout">退出当前账户</string>
    <string name="string_register">注 册</string> 
    <string name="string_item1">我的吐槽</string> 
    <string name="string_item2">我的收藏</string> 
    <string name="string_item3">我的参与</string> 
    
    <string name="string_item4">清除缓存</string> 
    <string name="string_item5">自动检测更新</string> 
    
    <string name="string_item6">错误反馈</string> 
    <string name="string_item7">去应用市场评分</string> 
    <string name="string_item8">关于易吐槽</string> 
    
    <string name="enter_email">请输入邮箱</string>
    <string name="enter_password">请输入密码</string>
    <string name="enter_password_again">请再次输入密码</string>
    <string name="register_account"><u>注册账户</u></string>
    <string name="forget_password"><u>忘记密码</u></string>
    
    <string name="string_or">or</string>
    <string name="string_weibo_login">新浪微博账户登录</string>
    <string name="string_qq_login">QQ账户登录</string>
    
    <string name="string_user_info">个人资料</string>
    <string name="share_bind">社会化分享绑定</string>
    
    <string name="sina">新浪微博</string>
    <string name="qqzone">QQ空间</string>
    <string name="douban">豆   瓣</string>
    
    <string name="error">错误提示</string>

</resources>
