<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/pagetabstrip_background"
    android:orientation="vertical"
    >
    
    <EditText android:id="@+id/userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:padding="5dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/shape_edit_text"
        />
    <EditText android:id="@+id/userPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:singleLine="true"
        android:padding="5dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:background="@drawable/shape_edit_text"
        />
    <Button android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/string_login"
        android:padding="5dp"
        android:textColor="@color/text_color_white"
        android:background="@drawable/login_button_selector"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <!-- <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/actionbar_background" 
            android:layout_alignParentRight="true"
            android:textSize="15sp"
            android:autoLink="all"
            />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/forgetPasswordTextView"
            android:text="@string/register"
            android:textColor="@color/actionbar_background"
            android:textSize="15sp"
            android:autoLink="all"/>

    </RelativeLayout> -->
    
</LinearLayout>